@@ -17,10 +17,12 @@
 
 钢铁表面的缺陷（如夹杂物、划痕等）直接影响产品质量和生产安全。传统检测依赖人工或独立设备，数据分散且分析效率低下，难以满足现代工业对实时性和智能化的需求。近年来，Web 技术和人工智能的结合为缺陷数据管理与分析提供了新路径。然而，现有系统多依赖云端 AI 服务，存在数据泄漏风险和高延迟问题。 本研究提出了一种本地化、智能化的钢铁表面缺陷分析平台，基于 Java 和 Spring Boot 框架开发，集成 MySQL 数据库和 Ollama 部署的 DeepSeek v3 模型。平台通过 Web 管理端提供用户验证、数据管理与可视化功能，支持用户基于缺陷数据提问并获取 AI 分析结果。其核心创新包括本地 AI 部署保障数据安全、高效的数据处理与实时交互能力。
 
+
+
 ## 2. 系统设计与实现 
 
 ### 2.1 系统架构
-系统采用前后端分离架构，前端基于 Bootstrap 和 Chart.js 实现交互界面，后端通过 Spring Boot 提供 RESTful API 服务。整体流程如下： 
+系统采用前后端分离架构，前端基于 JavaScript 语言进行 API 调用以将数据库数据提取到前端，前端基于 Tailwind 渲染，后端通过 Java Spring Boot 提供 RESTful API 服务。整体流程如下： 
 
 ```mermaid
 graph TD    
@@ -37,45 +39,22 @@ E --> I[可视化展示]
 H --> I
 ```
 
-### 2.2 Web 管理端
+### 2.2 用户验证
 
-**用户验证**：通过 Spring Security 实现基本的身份认证，用户需登录才能访问平台功能，确保数据访问安全。
-
-**界面设计**：基于 Bootstrap 5.3.2，提供响应式布局和侧边导航栏，支持数据展示、统计分析和 AI 分析三大模块。
+用户在登录界面首先会收到模态框填写表格，用户需要填写用户名密码与验证码，才能提交。前端发送数据至 `/api/users/username/{username}` 获取用户信息，后端从数据库中查询并返回记录，比对密码实现用户登陆验证。
 
 ### 2.3 数据管理与存储
 
-- **技术选型**：采用 MySQL 8.0 作为数据库，通过 MyBatis 3.0.4 实现数据访问。
-- 实现逻辑：
-  - ResultService 类提供数据查询服务（getAllResults 和 getResultById），从数据库提取缺陷记录（包括 ID、名称、日期、标签等）。
-  - 数据通过 REST API（如 /api/data/getAll）传输至前端。
-- **数据结构**：缺陷记录包括检测时间、标签（夹杂物、划痕等）、Dice 评分等字段。
+**技术选型**：采用 MySQL 8.0 作为数据库，通过 MyBatis 3.0.4 实现数据访问。
 
-### 2.4 数据可视化
+实现逻辑：ResultService 类提供数据查询服务（getAllResults 和 getResultById），从数据库提取缺陷记录（包括 ID、名称、日期、标签等）。数据通过 REST API（如 /api/data/getAll）传输至前端。
 
-- 实现方式
-
-  ：前端使用 Chart.js 绘制三种图表：
-
-  1. **饼图**：展示缺陷标签分布（如夹杂物、划痕占比）。
-  2. **柱状图**：展示检测时间分布（分段为 0.05-0.15 秒）。
-  3. **柱状图**：展示缺陷数量分布（0-4 个）。
-
-- **动态更新**：通过 fetchData 函数从后端获取数据并实时刷新图表。
+获取到所有记录后，前端依据 Chart.js 框架生成图表以实现图形化数据。
 
 ### 2.5 AI 分析与问答
 
-- 本地部署：
+本地部署：使用 Ollama 部署 DeepSeek v3 模型于本地服务器，避免数据传输至外部云端。保障数据隐私，降低网络延迟。
 
-  - 使用 Ollama 部署 DeepSeek v3 模型于本地服务器，避免数据传输至外部云端。
-  - 优点：保障数据隐私，降低网络延迟。
+实现逻辑：DeepSeekController 通过 REST API（/api/ai/analyze）接收用户提问（prompt）。
 
-- 实现逻辑：
-
-  - DeepSeekController 通过 REST API（/api/ai/analyze）接收用户提问（prompt）。
-
-  - 原代码调用外部 DeepSeek API，现改为本地 Ollama 接口（假设地址为 http://localhost:11434/api/chat）。
-
-  - 示例请求：
-
-    json
+ps：在实现时为了保证运行速度和稳定性，暂时先采用了官方 Deepseek API，可改为本地 Ollama 接口（假设地址为 http://localhost:11434/api/chat）。
