@@ -30,7 +30,7 @@
 <body>
 
 <div class="fixed top-0 left-0 h-screen w-64 bg-gray-800 p-5">
-    <h4 class="text-center text-white mb-5">SDD Dashboard</h4>
+    <h4 class="text-center text-white mb-5">钢铁缺陷分析平台</h4>
     <a href="#" class="block py-2 px-4 text-white text-lg hover:bg-gray-700 transition duration-300">数据展示</a>
     <a href="statics.html" class="block py-2 px-4 text-white text-lg hover:bg-gray-700 transition duration-300">统计分析</a>
     <a href="ai-analysis.html" class="block py-2 px-4 text-white text-lg hover:bg-gray-700 transition duration-300">AI 分析</a>
