@@ -1,2 +1,6 @@
+2025-03-26
+1. 修改前端样式框架为 Tailwind CSS
+2. 修改成 Deepseek AI 调用为 JavaScript 直接调用
+
 2025-03-25
 1. 添加登陆验证码
